--- a/assessment/Views/Home/Index.cshtml
+++ b/assessment/Views/Home/Index.cshtml
@@ -3,20 +3,26 @@
 
 
 }
-
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
 <script src="~/Scripts/jquery-3.3.1.js"></script>
 
 @*<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">*@
 <script type="text/javascript">
 
     $(document).ready(function () {
-     
+
+        $('#txtName').bind('keyup blur', function () {
+            var node = $(this);
+            node.val(node.val().replace(/[^a-z]/g, ''));
+        }
+        );
         getCity();
         getState();
         getproduct();
         getincode();
         AddCustomer();
     })
+
 
     function getCity() {
         debugger;
@@ -123,13 +129,20 @@
 
 </script>
 
-<div>
+
+<style>
+    .in{
+    width: 176px;
+    height: 33px;
+    margin-top: 10px;
+    }
+</style>
 
 
     <table>
         <tr>
             <td>Product Name:  </td>
-            <td><select id="ddlproduct" class="select" multiple></select>
+            <td><select id="ddlproduct" class="in" multiple></select>
             <td>
         </tr>
         <tr>
